name:                rsync-imap
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rsync-imap#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, IMAP.Sync, IMAP.Connection, IMAP.Parsers, IMAP.Types, IMAP.Formatters
  build-depends:       base >= 4.7 && < 5
                     , connection
                     , socket
                     , word8
                     , bytestring
                     , attoparsec
                     , time
                     , network
                     , text
                     , sandi
                     , uuid
                     , beam-core
                     , beam-sqlite
  default-language:    Haskell2010

executable rsync-imap-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cli
                     , rsync-imap
  default-language:    Haskell2010

test-suite rsync-imap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
                ParsersSpec
              , FormatSpec
              , SyncSpec
  build-depends:       base
                     , rsync-imap
                     , HUnit
                     , bytestring
                     , attoparsec
                     , time
                     -- mocking io connection
                     , network
                     , connection
                     , mtl
                     , true-name
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/janesser/rsync-imap
